crates/engine/src/parser/oracle_ir/snapshots/engine__parser__oracle_ir__snapshot_tests__entropic_battlecruiser_ir.snap
---
source: crates/engine/src/parser/oracle_ir/snapshot_tests.rs
expression: "&ir"
---
{
  "items": [
    {
      "id": 1,
      "source": {
        "id": {
          "item": 1,
          "ordinal": 0
        },
        "span": {
          "first_line": 1,
          "last_line": 1,
          "start_byte": 149,
          "end_byte": 209,
          "precision": "Exact",
          "ordinal_within_span": 0
        },
        "fragment": "1+ | Whenever an opponent discards a card, they lose 3 life."
      },
      "node": {
        "PreLoweredTrigger": {
          "mode": "Discarded",
          "execute": {
            "kind": "Spell",
            "effect": {
              "type": "LoseLife",
              "amount": {
                "type": "Fixed",
                "value": 3
              },
              "target": {
                "type": "TriggeringPlayer"
              }
            },
            "cost": null,
            "sub_ability": null,
            "duration": null,
            "description": null,
            "target_prompt": null,
            "condition": null,
            "optional_targeting": false,
            "optional": false,
            "forward_result": false
          },
          "valid_card": {
            "type": "Typed",
            "type_filters": [
              "Card"
            ],
            "controller": null,
            "properties": []
          },
          "origin": null,
          "destination": null,
          "trigger_zones": [
            "Battlefield"
          ],
          "phase": null,
          "optional": false,
          "damage_kind": "Any",
          "secondary": false,
          "valid_target": {
            "type": "Typed",
            "type_filters": [],
            "controller": "Opponent",
            "properties": []
          },
          "valid_source": null,
          "description": "Whenever an opponent discards a card, they lose 3 life.",
          "constraint": null,
          "condition": {
            "type": "HasCounters",
            "counters": {
              "type": "OfType",
              "data": "charge"
            },
            "minimum": 1
          },
          "batched": false
        }
      }
    },
    {
      "id": 0,
      "source": {
        "id": {
          "item": 0,
          "ordinal": 0
        },
        "span": {
          "first_line": 2,
          "last_line": 2,
          "start_byte": 210,
          "end_byte": 233,
          "precision": "Exact",
          "ordinal_within_span": 0
        },
        "fragment": "8+ | Flying, deathtouch"
      },
      "node": {
        "Static": {
          "definition": {
            "mode": "Continuous",
            "affected": {
              "type": "SelfRef"
            },
            "modifications": [
              {
                "type": "AddKeyword",
                "keyword": "Flying"
              },
              {
                "type": "AddKeyword",
                "keyword": "Deathtouch"
              }
            ],
            "condition": {
              "type": "HasCounters",
              "counters": {
                "type": "OfType",
                "data": "charge"
              },
              "minimum": 8
            },
            "affected_zone": null,
            "effect_zone": null,
            "active_zones": [],
            "characteristic_defining": false,
            "description": "8+ | Flying, deathtouch"
          },
          "source_text": "Flying, deathtouch",
          "body_ir": null
        }
      }
    },
    {
      "id": 2,
      "source": {
        "id": {
          "item": 2,
          "ordinal": 0
        },
        "span": {
          "first_line": 3,
          "last_line": 3,
          "start_byte": 234,
          "end_byte": 322,
          "precision": "Exact",
          "ordinal_within_span": 0
        },
        "fragment": "Whenever ~ attacks, each opponent discards a card. Each opponent who can't loses 3 life."
      },
      "node": {
        "PreLoweredTrigger": {
          "mode": "Attacks",
          "execute": {
            "kind": "Spell",
            "effect": {
              "type": "Discard",
              "count": {
                "type": "Fixed",
                "value": 1
              },
              "target": {
                "type": "Controller"
              }
            },
            "cost": null,
            "sub_ability": {
              "kind": "Spell",
              "effect": {
                "type": "LoseLife",
                "amount": {
                  "type": "Fixed",
                  "value": 3
                },
                "target": {
                  "type": "ScopedPlayer"
                }
              },
              "cost": null,
              "sub_ability": null,
              "duration": null,
              "description": null,
              "target_prompt": null,
              "condition": {
                "type": "And",
                "conditions": [
                  {
                    "type": "Not",
                    "condition": {
                      "type": "EffectOutcome",
                      "signal": "CurrentScopeSucceeded"
                    }
                  },
                  {
                    "type": "ScopedPlayerMatches",
                    "filter": {
                      "type": "Opponent"
                    }
                  }
                ]
              },
              "optional_targeting": false,
              "optional": false,
              "forward_result": false
            },
            "duration": null,
            "description": null,
            "target_prompt": null,
            "condition": null,
            "optional_targeting": false,
            "optional": false,
            "forward_result": false,
            "player_scope": {
              "type": "Opponent"
            }
          },
          "valid_card": {
            "type": "SelfRef"
          },
          "origin": null,
          "destination": null,
          "trigger_zones": [
            "Battlefield"
          ],
          "phase": null,
          "optional": false,
          "damage_kind": "Any",
          "secondary": false,
          "valid_target": null,
          "valid_source": null,
          "description": "Whenever ~ attacks, each opponent discards a card. Each opponent who can't loses 3 life.",
          "constraint": null,
          "condition": {
            "type": "HasCounters",
            "counters": {
              "type": "OfType",
              "data": "charge"
            },
            "minimum": 8
          },
          "batched": false
        }
      }
    }
  ],
  "source_text": "Station (Tap another creature you control: Put charge counters equal to its power on this Spacecraft. Station only as a sorcery. It's an artifact creature at 8+.)\n1+ | Whenever an opponent discards a card, they lose 3 life.\n8+ | Flying, deathtouch\nWhenever this Spacecraft attacks, each opponent discards a card. Each opponent who can't loses 3 life.",
  "card_name": "Entropic Battlecruiser"
}
