crates/engine/src/parser/oracle_ir/snapshots/engine__parser__oracle_ir__snapshot_tests__evils_thrall_ir.snap
---
source: crates/engine/src/parser/oracle_ir/snapshot_tests.rs
expression: "&ir"
---
{
  "items": [
    {
      "id": 0,
      "source": {
        "id": {
          "item": 0,
          "ordinal": 0
        },
        "span": {
          "first_line": 0,
          "last_line": 0,
          "start_byte": 0,
          "end_byte": 245,
          "precision": "Exact",
          "ordinal_within_span": 0
        },
        "fragment": "Gain control of target creature until end of turn. If you control a Villain with greater mana value than that creature, gain control of that creature until the end of your next turn instead. Untap that creature. It gains haste until end of turn."
      },
      "node": {
        "Spell": {
          "source_text": "Gain control of target creature until end of turn. If you control a Villain with greater mana value than that creature, gain control of that creature until the end of your next turn instead. Untap that creature. It gains haste until end of turn.",
          "body": {
            "clauses": [
              {
                "id": 0,
                "source": {
                  "id": {
                    "item": 0,
                    "ordinal": 1
                  },
                  "span": {
                    "first_line": 0,
                    "last_line": 0,
                    "start_byte": 0,
                    "end_byte": 49,
                    "precision": "ChainRelative",
                    "ordinal_within_span": 0
                  },
                  "fragment": "Gain control of target creature until end of turn"
                },
                "disposition": {
                  "Emit": {
                    "followup": null,
                    "intrinsic": null
                  }
                },
                "parsed": {
                  "effect": {
                    "type": "GainControl",
                    "target": {
                      "type": "Typed",
                      "type_filters": [
                        "Creature"
                      ],
                      "controller": null,
                      "properties": []
                    }
                  },
                  "duration": "UntilEndOfTurn",
                  "sub_ability": null,
                  "distribute": null,
                  "multi_target": null,
                  "condition": null,
                  "optional": false,
                  "unless_pay": null
                },
                "boundary": "Sentence",
                "condition": null,
                "is_optional": false,
                "opponent_may_scope": null,
                "repeat_for": null,
                "player_scope": null,
                "starting_with": null,
                "delayed_condition": null,
                "prefix_delayed_condition": null,
                "multi_target": null,
                "where_x_expression": null,
                "unless_pay": null
              },
              {
                "id": 1,
                "source": {
                  "id": {
                    "item": 0,
                    "ordinal": 2
                  },
                  "span": {
                    "first_line": 0,
                    "last_line": 0,
                    "start_byte": 51,
                    "end_byte": 189,
                    "precision": "ChainRelative",
                    "ordinal_within_span": 1
                  },
                  "fragment": "If you control a Villain with greater mana value than that creature, gain control of that creature until the end of your next turn instead"
                },
                "disposition": {
                  "ReplaceMeaning": {
                    "kind": {
                      "Instead": {
                        "kind": "Spell",
                        "effect": {
                          "type": "GainControl",
                          "target": {
                            "type": "ParentTarget"
                          }
                        },
                        "cost": null,
                        "sub_ability": null,
                        "duration": {
                          "UntilEndOfNextTurnOf": {
                            "player": {
                              "type": "Controller"
                            }
                          }
                        },
                        "description": null,
                        "target_prompt": null,
                        "condition": {
                          "type": "ConditionInstead",
                          "inner": {
                            "type": "QuantityCheck",
                            "lhs": {
                              "type": "Ref",
                              "qty": {
                                "type": "ObjectCount",
                                "filter": {
                                  "type": "Typed",
                                  "type_filters": [
                                    {
                                      "Subtype": "Villain"
                                    }
                                  ],
                                  "controller": "You",
                                  "properties": [
                                    {
                                      "type": "Cmc",
                                      "comparator": "GT",
                                      "value": {
                                        "type": "Ref",
                                        "qty": {
                                          "type": "ObjectManaValue",
                                          "scope": {
                                            "type": "Target"
                                          }
                                        }
                                      }
                                    },
                                    {
                                      "type": "InZone",
                                      "zone": "Battlefield"
                                    }
                                  ]
                                }
                              }
                            },
                            "comparator": "GE",
                            "rhs": {
                              "type": "Fixed",
                              "value": 1
                            }
                          }
                        },
                        "optional_targeting": false,
                        "optional": false,
                        "forward_result": false
                      }
                    }
                  }
                },
                "parsed": {
                  "effect": {
                    "type": "Unimplemented",
                    "name": "instead_clause_placeholder",
                    "description": null
                  },
                  "duration": null,
                  "sub_ability": null,
                  "distribute": null,
                  "multi_target": null,
                  "condition": null,
                  "optional": false,
                  "unless_pay": null
                },
                "boundary": "Sentence",
                "condition": null,
                "is_optional": false,
                "opponent_may_scope": null,
                "repeat_for": null,
                "player_scope": null,
                "starting_with": null,
                "delayed_condition": null,
                "prefix_delayed_condition": null,
                "multi_target": null,
                "where_x_expression": null,
                "unless_pay": null
              },
              {
                "id": 2,
                "source": {
                  "id": {
                    "item": 0,
                    "ordinal": 3
                  },
                  "span": {
                    "first_line": 0,
                    "last_line": 0,
                    "start_byte": 191,
                    "end_byte": 210,
                    "precision": "ChainRelative",
                    "ordinal_within_span": 2
                  },
                  "fragment": "Untap that creature"
                },
                "disposition": {
                  "Emit": {
                    "followup": null,
                    "intrinsic": null
                  }
                },
                "parsed": {
                  "effect": {
                    "type": "SetTapState",
                    "target": {
                      "type": "ParentTarget"
                    },
                    "scope": {
                      "type": "Single"
                    },
                    "state": {
                      "type": "Untap"
                    }
                  },
                  "duration": null,
                  "sub_ability": null,
                  "distribute": null,
                  "multi_target": null,
                  "condition": null,
                  "optional": false,
                  "unless_pay": null
                },
                "boundary": "Sentence",
                "condition": null,
                "is_optional": false,
                "opponent_may_scope": null,
                "repeat_for": null,
                "player_scope": null,
                "starting_with": null,
                "delayed_condition": null,
                "prefix_delayed_condition": null,
                "multi_target": null,
                "where_x_expression": null,
                "unless_pay": null
              },
              {
                "id": 3,
                "source": {
                  "id": {
                    "item": 0,
                    "ordinal": 4
                  },
                  "span": {
                    "first_line": 0,
                    "last_line": 0,
                    "start_byte": 212,
                    "end_byte": 244,
                    "precision": "ChainRelative",
                    "ordinal_within_span": 3
                  },
                  "fragment": "It gains haste until end of turn"
                },
                "disposition": {
                  "Emit": {
                    "followup": null,
                    "intrinsic": null
                  }
                },
                "parsed": {
                  "effect": {
                    "type": "GenericEffect",
                    "static_abilities": [
                      {
                        "mode": "Continuous",
                        "affected": {
                          "type": "SelfRef"
                        },
                        "modifications": [
                          {
                            "type": "AddKeyword",
                            "keyword": "Haste"
                          }
                        ],
                        "condition": null,
                        "affected_zone": null,
                        "effect_zone": null,
                        "active_zones": [],
                        "characteristic_defining": false,
                        "description": "gain haste"
                      }
                    ],
                    "duration": "UntilEndOfTurn",
                    "target": null
                  },
                  "duration": "UntilEndOfTurn",
                  "sub_ability": null,
                  "distribute": null,
                  "multi_target": null,
                  "condition": null,
                  "optional": false,
                  "unless_pay": null
                },
                "boundary": "Sentence",
                "condition": null,
                "is_optional": false,
                "opponent_may_scope": null,
                "repeat_for": null,
                "player_scope": null,
                "starting_with": null,
                "delayed_condition": null,
                "prefix_delayed_condition": null,
                "multi_target": null,
                "where_x_expression": null,
                "unless_pay": null
              }
            ],
            "kind": "Spell",
            "continuation_kind": null,
            "player_scope_rewrite": "Apply",
            "chain_rounding": null,
            "actor": null,
            "in_trigger": false,
            "repeat_until": null
          },
          "shell": {
            "sub_link": null
          },
          "die_results": [],
          "root_transforms": [
            {
              "SetMinXValue": 0
            },
            {
              "SetDescription": "Gain control of target creature until end of turn. If you control a Villain with greater mana value than that creature, gain control of that creature until the end of your next turn instead. Untap that creature. It gains haste until end of turn."
            }
          ]
        }
      }
    }
  ],
  "source_text": "Gain control of target creature until end of turn. If you control a Villain with greater mana value than that creature, gain control of that creature until the end of your next turn instead. Untap that creature. It gains haste until end of turn.",
  "card_name": "Evil's Thrall"
}
