crates/engine/src/parser/oracle_ir/snapshots/engine__parser__oracle_ir__snapshot_tests__evils_thrall_lowered.snap
---
source: crates/engine/src/parser/oracle_ir/snapshot_tests.rs
expression: "&lowered"
---
{
  "abilities": [
    {
      "kind": "Spell",
      "effect": {
        "type": "GainControl",
        "target": {
          "type": "Typed",
          "type_filters": [
            "Creature"
          ],
          "controller": null,
          "properties": []
        }
      },
      "cost": null,
      "sub_ability": {
        "kind": "Spell",
        "effect": {
          "type": "GainControl",
          "target": {
            "type": "ParentTarget"
          }
        },
        "cost": null,
        "sub_ability": {
          "kind": "Spell",
          "effect": {
            "type": "SetTapState",
            "target": {
              "type": "ParentTarget"
            },
            "scope": {
              "type": "Single"
            },
            "state": {
              "type": "Untap"
            }
          },
          "cost": null,
          "sub_ability": {
            "kind": "Spell",
            "effect": {
              "type": "GenericEffect",
              "static_abilities": [
                {
                  "mode": "Continuous",
                  "affected": {
                    "type": "SelfRef"
                  },
                  "modifications": [
                    {
                      "type": "AddKeyword",
                      "keyword": "Haste"
                    }
                  ],
                  "condition": null,
                  "affected_zone": null,
                  "effect_zone": null,
                  "active_zones": [],
                  "characteristic_defining": false,
                  "description": "gain haste"
                }
              ],
              "duration": "UntilEndOfTurn",
              "target": null
            },
            "cost": null,
            "sub_ability": null,
            "duration": "UntilEndOfTurn",
            "description": null,
            "target_prompt": null,
            "condition": null,
            "optional_targeting": false,
            "optional": false,
            "forward_result": false,
            "sub_link": "SequentialSibling"
          },
          "duration": null,
          "description": null,
          "target_prompt": null,
          "condition": null,
          "optional_targeting": false,
          "optional": false,
          "forward_result": false,
          "sub_link": "SequentialSibling"
        },
        "duration": {
          "UntilEndOfNextTurnOf": {
            "player": {
              "type": "Controller"
            }
          }
        },
        "description": null,
        "target_prompt": null,
        "condition": {
          "type": "ConditionInstead",
          "inner": {
            "type": "QuantityCheck",
            "lhs": {
              "type": "Ref",
              "qty": {
                "type": "ObjectCount",
                "filter": {
                  "type": "Typed",
                  "type_filters": [
                    {
                      "Subtype": "Villain"
                    }
                  ],
                  "controller": "You",
                  "properties": [
                    {
                      "type": "Cmc",
                      "comparator": "GT",
                      "value": {
                        "type": "Ref",
                        "qty": {
                          "type": "ObjectManaValue",
                          "scope": {
                            "type": "Target"
                          }
                        }
                      }
                    },
                    {
                      "type": "InZone",
                      "zone": "Battlefield"
                    }
                  ]
                }
              }
            },
            "comparator": "GE",
            "rhs": {
              "type": "Fixed",
              "value": 1
            }
          }
        },
        "optional_targeting": false,
        "optional": false,
        "forward_result": false
      },
      "duration": "UntilEndOfTurn",
      "description": "Gain control of target creature until end of turn. If you control a Villain with greater mana value than that creature, gain control of that creature until the end of your next turn instead. Untap that creature. It gains haste until end of turn.",
      "target_prompt": null,
      "condition": null,
      "optional_targeting": false,
      "optional": false,
      "forward_result": false
    }
  ],
  "triggers": [],
  "statics": [],
  "replacements": [],
  "extractedKeywords": []
}
