crates/engine/src/parser/oracle_ir/snapshots/engine__parser__oracle_ir__snapshot_tests__experiment_one_lowered.snap
---
source: crates/engine/src/parser/oracle_ir/snapshot_tests.rs
expression: "&lowered"
---
{
  "abilities": [
    {
      "kind": "Spell",
      "effect": {
        "type": "Unimplemented",
        "name": "unknown",
        "description": "Evolve"
      },
      "cost": null,
      "sub_ability": null,
      "duration": null,
      "description": "Evolve",
      "target_prompt": null,
      "sorcery_speed": false,
      "condition": null,
      "optional_targeting": false,
      "optional": false,
      "forward_result": false
    },
    {
      "kind": "Activated",
      "effect": {
        "type": "Regenerate",
        "target": {
          "type": "ParentTarget"
        }
      },
      "cost": {
        "type": "RemoveCounter",
        "count": 2,
        "counter_type": "P1P1",
        "target": null
      },
      "sub_ability": null,
      "duration": null,
      "description": "Remove two +1/+1 counters from ~: Regenerate it.",
      "target_prompt": null,
      "sorcery_speed": false,
      "condition": null,
      "optional_targeting": false,
      "optional": false,
      "forward_result": false
    }
  ],
  "triggers": [],
  "statics": [],
  "replacements": [],
  "extractedKeywords": []
}
